[package]
name = "pgt_proxy"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
rustls = "0.23.5"
rustls-pemfile = "2.1.2"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
clap = { version = "4.5.4", features = ["derive"]}

